samples/_failures_safe/1761449741_af2756_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_231574b0.c: In function ‘main’:
./samples/SAFE/__tmp_231574b0.c:138:9: error: expected declaration or statement at end of input
  138 |         printf("Invalid dimensions\n");
      |         ^~~~~~
./samples/SAFE/__tmp_231574b0.c:138:9: error: expected declaration or statement at end of input
